* Revise FAQ
* SCREENSHOT 17. Testimonials Widget Settings > Compatibility & Reset tab
* Show latest updates notice on activation
* Spellcheck readme.txt
* Update CSS for WordPress Coding standards
* Update FAQ
* Update JavaScript for WordPress Coding standards
* Update PHP for WordPress Coding Standards
* Update POT
* Update TODOs
* Update premium features

= 2.11.3 =
* BUGFIX [Can't set featured image](http://wordpress.org/support/topic/cant-set-featured-image-3)
* Begin WordPress coding standard cleanup
* Bold option headers
* Change `has_archive` default from `testimonials` to `testimonials-archive`
* Clean up static method calls to prevent PHP Strict notices
* Correct filter name `testimonials_widget_next_posts_link` to `testimonials_widget_next_posts_link_text`
* Correct static methods calling
* Secure activation, deactivation, uninstall operations
* Update POT
* Update profile

= 2.11.2 =
* Add `min1` and `nozero` validation
* Always include settings class
* BUGFIX Don't prepend http to email addresses
* Move lesser used widget options to expandable Additional Widget Options section
* Move settings setup to `init`
* Revise `absint` and `intval` validation to default on blank entry
* Update POT
* Update TODO
* Update text domain for localization and POT
* Use `links_add_target` for widget title link

= 2.11.1 =
* BUGFIX [Fatal error: Testimonials_Widget_Settings](http://wordpress.org/support/topic/fatal-error-testimonials_widget_settings)

= 2.11.0 =
* Add Option "Hide Image in Single View?" `hide_image_single`
* Add `.author` and `.email` to CSS
* Add `.single` to single view testimonials
* Add location to meta_key ordering options
* BUGFIX [Convert q tags to blockquote](http://wordpress.org/support/topic/open-link-in-new-tab-html-validation) [Why?](http://www.w3schools.com/tags/tag_blockquote.asp)