@@ -1,0 +1,24 @@
+<?xml version="1.0"?>
+<ruleset name="Aihrus"
+	xmlns="http://pmd.sf.net/ruleset/1.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://pmd.sf.net/ruleset/1.0.0 http://pmd.sf.net/ruleset_xml_schema.xsd"
+	xsi:noNamespaceSchemaLocation="http://pmd.sf.net/ruleset_xml_schema.xsd">
+	<description>
+		Custom phpmd rules to check for Aihrus' WordPress projects
+	</description>
+
+	<exclude-pattern>lib/class-redrokk-metabox-class.php</exclude-pattern>
+
+	<!-- @ref http://phpmd.org/documentation/creating-a-ruleset.html -->
+
+	<!--
+	<rule ref="rulesets/codesize.xml" />
+	-->
+	<rule ref="rulesets/controversial.xml/Superglobals" />
+	<rule ref="rulesets/design.xml" />
+	<rule ref="rulesets/naming.xml">
+		<exclude name="ShortVariable" />
+	</rule>
+	<rule ref="rulesets/unusedcode.xml" />
+</ruleset>
