@@ -30,6 +30,7 @@
 * Update POT
 * Update TODOs
 * Update premium features
+* Update rulesets
 
 = 2.11.3 =
 * BUGFIX [Can't set featured image](http://wordpress.org/support/topic/cant-set-featured-image-3)
